<package>
  <name>mm_core_msgs</name>
  <version>0.1.1</version>
  <description>
   Message definitions and serialisations for core messages.
  </description>
  <url type="repository">https://github.com/stonier/message_multiplexing</url>
  <url type="bugtracker">https://github.com/stonier/message_multiplexing/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_containers</build_depend>
  <build_depend>ecl_utilities</build_depend>
  <build_depend>mm_messages</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_containers</run_depend>
  <run_depend>ecl_utilities</run_depend>
  <run_depend>mm_messages</run_depend>
</package>
