<package>
  <name>mm_eigen_msgs</name>
  <version>0.2.0</version>
  <description>
   Message definitions and serialisations for Eigen messages.
  </description>
  <url type="repository">https://github.com/stonier/message_multiplexing</url>
  <url type="bugtracker">https://github.com/stonier/message_multiplexing/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>mm_core_msgs</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>mm_core_msgs</run_depend>
</package>
