<package>
  <name>mm_messages</name>
  <version>0.2.0</version>
  <description>
   Message definitions and serialisations for core messages.
  </description>
  <url type="repository">https://github.com/stonier/message_multiplexing</url>
  <url type="bugtracker">https://github.com/stonier/message_multiplexing/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_containers</build_depend>
  <build_depend>ecl_utilities</build_depend>
  <build_depend>nanomsg</build_depend>  <!-- Not really ideal to have in here, split later if we want different transports -->

  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_containers</run_depend>
  <run_depend>ecl_utilities</run_depend>
  <run_depend>nanomsg</run_depend>  <!-- Not really ideal to have in here, split later if we want different transports -->
</package>
