<package>
  <name>mm_radio</name>
  <version>0.2.4</version>
  <description>
   Multiplexing many packet types across a two-way radio connection with publishers and subscribers.
   Great for embedded connections by two-way serial or ethernet types.
  </description>
  <url type="repository">https://github.com/stonier/message_multiplexing</url>
  <url type="bugtracker">https://github.com/stonier/message_multiplexing/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <author>Daniel Stonier</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>ecl_build</build_depend>
  <build_depend>ecl_command_line</build_depend>
  <build_depend>ecl_exceptions</build_depend>
  <build_depend>ecl_threads</build_depend>
  <build_depend>ecl_time</build_depend>
  <build_depend>ecl_utilities</build_depend>
  <build_depend>mm_core_msgs</build_depend>
  <build_depend>mm_messages</build_depend>
  <build_depend>nanomsg</build_depend>

  <run_depend>ecl_build</run_depend>
  <run_depend>ecl_command_line</run_depend>
  <run_depend>ecl_exceptions</run_depend>
  <run_depend>ecl_threads</run_depend>
  <run_depend>ecl_time</run_depend>
  <run_depend>ecl_utilities</run_depend>
  <run_depend>mm_core_msgs</run_depend>
  <run_depend>mm_messages</run_depend>
  <run_depend>nanomsg</run_depend>

</package>
