##############################################################################
# Subdirectories
##############################################################################

#add_subdirectory(lib)

##############################################################################
# Executables
##############################################################################

add_executable(nanomsg_radio nanomsg_radio.cpp)
target_link_libraries(nanomsg_radio ${catkin_LIBRARIES})
